feat: add image in question and opstions
