# be/models/form_dto.go
@@ -93,6 +93,8 @@ type FieldResponse struct {
 	SectionID      *string         `json:"section_id,omitempty"`
 	IsRequired     bool            `json:"is_required"`
 	Points         int             `json:"points"`
+	ImageFileID    *string         `json:"image_file_id,omitempty"`
+	ImageURL       *string         `json:"image_url,omitempty"`
 	Options        *datatypes.JSON `json:"options,omitempty"`
 	AnswerKey      *datatypes.JSON `json:"answer_key,omitempty"`
 }
